# DeepFakeDetection

./: .replit  app.py  deepfake_detector.py  extensions.py  models.py  pyproject.toml  replit.nix  requirements.txt  utils.py
attached_assets/: Pasted-PS-D-AnhTuan-BaiTap-DoAnCDIO2-Code-GiaoDien-DeepFakeDetector-python-app-py-Traceback-most-recent-1740386090302.txt  Pasted-PS-D-AnhTuan-BaiTap-DoAnCDIO2-Code-GiaoDien-DeepFakeDetector-python-app-py-Traceback-most-recent-1740386586150.txt
instance/: deepfake.db
static/css/: style.css
static/js/: main.js
templates/: about.html  analysis.html  base.html  history.html  index.html
